sfdx/force-app/main/default/objects/Commercial_Policy__mdt/Commercial_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Commercial Policy</label>
    <pluralLabel>Commercial Policies</pluralLabel>
</CustomObject>