sfdx/force-app/main/default/objects/Commercial_Policy__mdt/fields/Discount_Manager_Limit__c.field-meta.xml
<CustomField>
    <fullName>Discount_Manager_Limit__c</fullName>
    <label>Discount Manager Limit (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <required>true</required>
</CustomField>