sfdx/force-app/main/default/objects/Commercial_Policy__mdt/fields/Pending_SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>Pending_SLA_Days__c</fullName>
    <label>Pending Approval SLA (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <required>true</required>
</CustomField>