sfdx/force-app/main/default/objects/Commercial_Policy__mdt/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <label>Policy Version</label>
    <length>120</length>
    <type>Text</type>
    <required>true</required>
</CustomField>