sfdx/force-app/main/default/objects/Commercial_Policy__mdt/fields/Standard_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Standard_Payment_Terms__c</fullName>
    <label>Standard Payment Terms</label>
    <length>120</length>
    <type>Text</type>
    <required>true</required>
</CustomField>