sfdx/force-app/main/default/objects/Commercial_Policy__mdt/fields/VP_ACV_Threshold__c.field-meta.xml
<CustomField>
    <fullName>VP_ACV_Threshold__c</fullName>
    <label>VP Sales ACV Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <required>true</required>
</CustomField>